--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,12 @@ hs_err_pid*
 .idea/
 *.class
 *.log
-./target
-./kafka1
-./logs
-./zoo1
-./redis
+target/
+kafka1/
+logs/
+zoo1/
+redis/
 .DS_Store
 *.lst
-./container-data
+container-data/
+venv/
